force-app/main/default/objects/Reservation__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <description>CC Hashtag End date and time of reservation Visualforce</description>
    <encryptionScheme>None</encryptionScheme>
    <label>End</label>
    <type>DateTime</type>
</CustomField>