force-app/main/default/objects/Reservation__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <formula>(End__c - Start__c) * 24 * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>