force-app/main/default/objects/Reservation__c/fields/Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Type__c</fullName>
    <description>Created By: DA
Business Unit: Hashtag
Purpose: Room Type pulled from the Space on record creation.
Populated by: Process Builder - Reservation - Create</description>
    <label>Room Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conference Room</fullName>
            </value>
            <value>
                <fullName>Podcast Booth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>