force-app/main/default/objects/Reservation__c/fields/Room_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Room_Type_Formula__c</fullName>
    <formula>TEXT( Space__r.Reservation_Room_Type__c )</formula>
    <label>Room Type Formula</label>
    <type>Text</type>
</CustomField>