force-app/main/default/objects/Reservation__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <description>CC Hashtag Start date and time of reservation Visualforce</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>