force-app/main/default/objects/Reservation__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>There&apos;s a known issue about DATEVALUE() with times near midnight:
https://success.salesforce.com/issues_view?id=a1p30000000Su0tAAC</description>
    <formula>DATEVALUE(Start__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>