force-app/main/default/objects/Reservation__c/recordTypes/Cowork_Reservation.recordType-meta.xml
<RecordType>
    <fullName>Cowork_Reservation</fullName>
    <active>true</active>
    <label>Cowork Reservation</label>
</RecordType>