force-app/main/default/objects/Reservation__c/recordTypes/Hashtag_Reservation.recordType-meta.xml
<RecordType>
    <fullName>Hashtag_Reservation</fullName>
    <active>true</active>
    <label>Hashtag Reservation</label>
</RecordType>