force-app/main/default/objects/Reservation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Space__c</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Start__c</columns>
    <columns>End__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>