force-app/main/default/objects/Reservation__c/listViews/Cowork_Redwood_CR_Active_Upcoming.listView-meta.xml
<ListView>
    <fullName>Cowork_Redwood_CR_Active_Upcoming</fullName>
    <columns>NAME</columns>
    <columns>Space__c</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Start__c</columns>
    <columns>End__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Space__c</field>
        <operation>equals</operation>
        <value>Redwood Conference Room</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Cowork-Redwood CR-Active &amp; Upcoming</label>
    <sharedTo>
        <group>Cowork_Team</group>
    </sharedTo>
</ListView>