force-app/main/default/objects/Reservation__c/listViews/This_Weeks_Reservations.listView-meta.xml
<ListView>
    <fullName>This_Weeks_Reservations</fullName>
    <columns>NAME</columns>
    <columns>Space__c</columns>
    <columns>Status__c</columns>
    <columns>Contact__c</columns>
    <columns>Start__c</columns>
    <columns>End__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>This Weeks Reservations</label>
</ListView>