force-app/main/default/objects/Reservation__c/listViews/Todays_Reservations.listView-meta.xml
<ListView>
    <fullName>Todays_Reservations</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Contact__c</columns>
    <columns>Start__c</columns>
    <columns>End__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Start__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Todays Reservations</label>
</ListView>